added footer section info

--- a/index.html
+++ b/index.html
@@ -286,6 +286,64 @@
           <li><button class="emailbtn">LOG IN</button></li>
         </ul>
       </div>
+
+      <div>
+        <div class="contain gutter-horiz-in gutter-top-in-fixed-3 gutter-bottom-in-fixed-4">
+          <span class="logo alt">WWF</span>
+          <ul class="nav">
+            <li><a data-track-event="Homepages Show|Footer Click|Careers" href="https://www.worldwildlife.org:443/about/careers">Careers</a></li>
+            <li><a data-track-event="Homepages Show|Footer Click|Contact" href="https://www.worldwildlife.org:443/about/contact">Contact</a></li>
+            <li><a data-track-event="Homepages Show|Footer Click|News &amp; Press" href="https://www.worldwildlife.org:443/about/news-press">News &amp; Press</a></li>
+            <li><a data-track-event="Homepages Show|Footer Click|Privacy Policy / Your Privacy Rights" href="https://www.worldwildlife.org:443/pages/privacy-policy">Privacy Policy / Your Privacy Rights</a></li>
+            <li><a data-track-event="Homepages Show|Footer Click|Site Terms" href="https://www.worldwildlife.org:443/pages/site-terms">Site Terms</a></li>
+            <li><a data-track-event="Homepages Show|Footer Click|State Disclosures" href="https://www.worldwildlife.org:443/pages/state-disclosures">State Disclosures</a></li>
+            <li><a data-track-event="Homepages Show|Footer Click|Help" href="http://worldwildlife.custhelp.com/app/answers/list">Help</a></li>
+            <li><a data-track-event="Homepages Show|Footer Click|Login" href="https://support.worldwildlife.org/site/SPageServer?pagename=SupporterCenter">Login</a></li>
+          </ul>
+          <p class="address">
+            <strong>World Wildlife Fund</strong><br> 1250 24th Street, N.W.<br> Washington, DC 20037
+          </p>
+          <ul class="nav nav-social">
+            <li>
+              <a href="http://www.facebook.com/worldwildlifefund" data-track-event="Homepages Show|Social Outbound Click - Footer|Facebook" data-social-cookie="facebook">
+                <span class="screen-reader">Facebook</span>
+                <i class="ico ico-facebook" aria-hidden="true">l</i>
+              </a>
+            </li>
+            <li>
+              <a href="http://twitter.com/world_wildlife" data-track-event="Homepages Show|Social Outbound Click - Footer|Twitter" data-social-cookie="twitter">
+                <span class="screen-reader">Twitter</span>
+                <i class="ico ico-twitter" aria-hidden="true">o</i>
+              </a>
+            </li>
+            <li>
+              <a href="http://instagram.com/World_Wildlife" data-track-event="Homepages Show|Social Outbound Click - Footer|Instagram" data-social-cookie="instagram">
+                <span class="screen-reader">Instagram</span>
+                <i class="ico ico-instagram" aria-hidden="true">B</i>
+              </a>
+            </li>
+            <li>
+              <a href="http://www.youtube.com/subscription_center?add_user=wwfus" data-track-event="Homepages Show|Social Outbound Click - Footer|YouTube" data-social-cookie="youtube">
+                <span class="screen-reader">YouTube</span>
+                <i class="ico ico-youtube" aria-hidden="true">r</i>
+              </a>
+            </li>
+            <li>
+              <a href="http://plus.google.com/107924515603459001334/posts" data-track-event="Homepages Show|Social Outbound Click - Footer|Google\+" data-social-cookie="google">
+                <span class="screen-reader">Google+</span>
+                <i class="ico ico-googleplus" aria-hidden="true">q</i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.worldwildlife.org/pages/rss-feeds" data-track-event="Homepages Show|Footer Click|RSS Feeds">
+                <span class="screen-reader">RSS Feeds</span>
+                <i class="ico ico-rss" aria-hidden="true">I</i>
+              </a>
+            </li>
+          </ul>
+          <p class="copyright">© 2017 World Wildlife Fund</p>
+        </div>
+      </div>
     </footer>
 
   </div>
