--- a/index.html
+++ b/index.html
@@ -287,18 +287,21 @@
         </ul>
       </div>
 
+<!-- footer section in progress -->
       <div>
-        <div class="contain gutter-horiz-in gutter-top-in-fixed-3 gutter-bottom-in-fixed-4">
-          <span class="logo alt">WWF</span>
-          <ul class="nav">
-            <li><a data-track-event="Homepages Show|Footer Click|Careers" href="https://www.worldwildlife.org:443/about/careers">Careers</a></li>
-            <li><a data-track-event="Homepages Show|Footer Click|Contact" href="https://www.worldwildlife.org:443/about/contact">Contact</a></li>
-            <li><a data-track-event="Homepages Show|Footer Click|News &amp; Press" href="https://www.worldwildlife.org:443/about/news-press">News &amp; Press</a></li>
-            <li><a data-track-event="Homepages Show|Footer Click|Privacy Policy / Your Privacy Rights" href="https://www.worldwildlife.org:443/pages/privacy-policy">Privacy Policy / Your Privacy Rights</a></li>
-            <li><a data-track-event="Homepages Show|Footer Click|Site Terms" href="https://www.worldwildlife.org:443/pages/site-terms">Site Terms</a></li>
-            <li><a data-track-event="Homepages Show|Footer Click|State Disclosures" href="https://www.worldwildlife.org:443/pages/state-disclosures">State Disclosures</a></li>
-            <li><a data-track-event="Homepages Show|Footer Click|Help" href="http://worldwildlife.custhelp.com/app/answers/list">Help</a></li>
-            <li><a data-track-event="Homepages Show|Footer Click|Login" href="https://support.worldwildlife.org/site/SPageServer?pagename=SupporterCenter">Login</a></li>
+        <div class="">
+          <span class="">WWF</span>
+          <ul class="navbar">
+            <li>
+              <a href="https://www.worldwildlife.org:443/about/careers">Careers</a>
+            </li>
+            <li><a  href="https://www.worldwildlife.org:443/about/contact">Contact</a></li>
+            <li><a href="https://www.worldwildlife.org:443/about/news-press">News &amp; Press</a></li>
+            <li><a  href="https://www.worldwildlife.org:443/pages/privacy-policy">Privacy Policy / Your Privacy Rights</a></li>
+            <li><a  href="https://www.worldwildlife.org:443/pages/site-terms">Site Terms</a></li>
+            <li><a  href="https://www.worldwildlife.org:443/pages/state-disclosures">State Disclosures</a></li>
+            <li><a  href="http://worldwildlife.custhelp.com/app/answers/list">Help</a></li>
+            <li><a  href="https://support.worldwildlife.org/site/SPageServer?pagename=SupporterCenter">Login</a></li>
           </ul>
           <p class="address">
             <strong>World Wildlife Fund</strong><br> 1250 24th Street, N.W.<br> Washington, DC 20037
