edited lower a-tags info

--- a/index.html
+++ b/index.html
@@ -308,37 +308,37 @@
           </p>
           <ul class="nav nav-social">
             <li>
-              <a href="http://www.facebook.com/worldwildlifefund" data-track-event="Homepages Show|Social Outbound Click - Footer|Facebook" data-social-cookie="facebook">
+              <a href="http://www.facebook.com/worldwildlifefund" >
                 <span class="screen-reader">Facebook</span>
                 <i class="ico ico-facebook" aria-hidden="true">l</i>
               </a>
             </li>
             <li>
-              <a href="http://twitter.com/world_wildlife" data-track-event="Homepages Show|Social Outbound Click - Footer|Twitter" data-social-cookie="twitter">
+              <a href="http://twitter.com/world_wildlife">
                 <span class="screen-reader">Twitter</span>
                 <i class="ico ico-twitter" aria-hidden="true">o</i>
               </a>
             </li>
             <li>
-              <a href="http://instagram.com/World_Wildlife" data-track-event="Homepages Show|Social Outbound Click - Footer|Instagram" data-social-cookie="instagram">
+              <a href="http://instagram.com/World_Wildlife">
                 <span class="screen-reader">Instagram</span>
                 <i class="ico ico-instagram" aria-hidden="true">B</i>
               </a>
             </li>
             <li>
-              <a href="http://www.youtube.com/subscription_center?add_user=wwfus" data-track-event="Homepages Show|Social Outbound Click - Footer|YouTube" data-social-cookie="youtube">
+              <a href="http://www.youtube.com/subscription_center?add_user=wwfus">
                 <span class="screen-reader">YouTube</span>
                 <i class="ico ico-youtube" aria-hidden="true">r</i>
               </a>
             </li>
             <li>
-              <a href="http://plus.google.com/107924515603459001334/posts" data-track-event="Homepages Show|Social Outbound Click - Footer|Google\+" data-social-cookie="google">
+              <a href="http://plus.google.com/107924515603459001334/posts">
                 <span class="screen-reader">Google+</span>
                 <i class="ico ico-googleplus" aria-hidden="true">q</i>
               </a>
             </li>
             <li>
-              <a href="https://www.worldwildlife.org/pages/rss-feeds" data-track-event="Homepages Show|Footer Click|RSS Feeds">
+              <a href="https://www.worldwildlife.org/pages/rss-feeds" >
                 <span class="screen-reader">RSS Feeds</span>
                 <i class="ico ico-rss" aria-hidden="true">I</i>
               </a>
