edited button to be div

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <input type="text" placeholder="Search">
       </li>
       <li>
-        <button>DONATE</button>
-        <button style="background-color:#e98300;">ADOPT</button>
+        <div class="button">DONATE</div>
+        <div class="button" style="background-color:#e98300;">ADOPT</div>
       </li>
     </div>
   </div>
