--- a/index.html
+++ b/index.html
@@ -278,16 +278,20 @@
       <div class="footerbar">
         <ul class="cards">
           <li>Get the latest conservation news with WWF email.</li>
-          <li><input type="text" placeholder="Email Address"></li>
-          <li><button class="emailbtn">SIGN UP</button></li>
+          <li>
+            <input type="text" placeholder="Email Address"></li>
+          <li>
+            <button class="emailbtn">SIGN UP</button></li>
           <li>
             <p>Already have a WWF account?</p>
           </li>
-          <li><button class="emailbtn">LOG IN</button></li>
+          <li>
+            <button class="emailbtn">LOG IN</button>
+          </li>
         </ul>
       </div>
 
-<!-- footer section in progress -->
+      <!-- footer section in progress-->
       <div>
         <div class="">
           <span class="">WWF</span>
@@ -295,20 +299,20 @@
             <li>
               <a href="https://www.worldwildlife.org:443/about/careers">Careers</a>
             </li>
-            <li><a  href="https://www.worldwildlife.org:443/about/contact">Contact</a></li>
+            <li><a href="https://www.worldwildlife.org:443/about/contact">Contact</a></li>
             <li><a href="https://www.worldwildlife.org:443/about/news-press">News &amp; Press</a></li>
-            <li><a  href="https://www.worldwildlife.org:443/pages/privacy-policy">Privacy Policy / Your Privacy Rights</a></li>
-            <li><a  href="https://www.worldwildlife.org:443/pages/site-terms">Site Terms</a></li>
-            <li><a  href="https://www.worldwildlife.org:443/pages/state-disclosures">State Disclosures</a></li>
-            <li><a  href="http://worldwildlife.custhelp.com/app/answers/list">Help</a></li>
-            <li><a  href="https://support.worldwildlife.org/site/SPageServer?pagename=SupporterCenter">Login</a></li>
+            <li><a href="https://www.worldwildlife.org:443/pages/privacy-policy">Privacy Policy / Your Privacy Rights</a></li>
+            <li><a href="https://www.worldwildlife.org:443/pages/site-terms">Site Terms</a></li>
+            <li><a href="https://www.worldwildlife.org:443/pages/state-disclosures">State Disclosures</a></li>
+            <li><a href="http://worldwildlife.custhelp.com/app/answers/list">Help</a></li>
+            <li><a href="https://support.worldwildlife.org/site/SPageServer?pagename=SupporterCenter">Login</a></li>
           </ul>
           <p class="address">
             <strong>World Wildlife Fund</strong><br> 1250 24th Street, N.W.<br> Washington, DC 20037
           </p>
           <ul class="nav nav-social">
             <li>
-              <a href="http://www.facebook.com/worldwildlifefund" >
+              <a href="http://www.facebook.com/worldwildlifefund">
                 <span class="screen-reader">Facebook</span>
                 <i class="ico ico-facebook" aria-hidden="true">l</i>
               </a>
@@ -338,7 +342,7 @@
               </a>
             </li>
             <li>
-              <a href="https://www.worldwildlife.org/pages/rss-feeds" >
+              <a href="https://www.worldwildlife.org/pages/rss-feeds">
                 <span class="screen-reader">RSS Feeds</span>
                 <i class="ico ico-rss" aria-hidden="true">I</i>
               </a>
