--- a/index.html
+++ b/index.html
@@ -299,13 +299,20 @@
             <li>
               <a href="https://www.worldwildlife.org:443/about/careers">Careers</a>
             </li>
-            <li><a href="https://www.worldwildlife.org:443/about/contact">Contact</a></li>
-            <li><a href="https://www.worldwildlife.org:443/about/news-press">News &amp; Press</a></li>
-            <li><a href="https://www.worldwildlife.org:443/pages/privacy-policy">Privacy Policy / Your Privacy Rights</a></li>
-            <li><a href="https://www.worldwildlife.org:443/pages/site-terms">Site Terms</a></li>
-            <li><a href="https://www.worldwildlife.org:443/pages/state-disclosures">State Disclosures</a></li>
-            <li><a href="http://worldwildlife.custhelp.com/app/answers/list">Help</a></li>
-            <li><a href="https://support.worldwildlife.org/site/SPageServer?pagename=SupporterCenter">Login</a></li>
+            <li>
+              <a href="https://www.worldwildlife.org:443/about/contact">Contact</a></li>
+            <li>
+              <a href="https://www.worldwildlife.org:443/about/news-press">News &amp; Press</a></li>
+            <li>
+              <a href="https://www.worldwildlife.org:443/pages/privacy-policy">Privacy Policy / Your Privacy Rights</a></li>
+            <li>
+              <a href="https://www.worldwildlife.org:443/pages/site-terms">Site Terms</a></li>
+            <li>
+              <a href="https://www.worldwildlife.org:443/pages/state-disclosures">State Disclosures</a></li>
+            <li>
+              <a href="http://worldwildlife.custhelp.com/app/answers/list">Help</a></li>
+            <li>
+              <a href="https://support.worldwildlife.org/site/SPageServer?pagename=SupporterCenter">Login</a></li>
           </ul>
           <p class="address">
             <strong>World Wildlife Fund</strong><br> 1250 24th Street, N.W.<br> Washington, DC 20037
