logo position tweaked

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <li>ABOUT US</li>
       <li>HOW TO HELP</li>
 
-      <li>
-        <input type="text" placeholder="Search">
+      <li >
+        <input class="search" type="text" placeholder="Search">
       </li>
       <li>
         <div class="button">DONATE</div>
@@ -72,12 +72,15 @@
 
         <!--SECTION IN PROGRESS: -->
         <li class="card-image2">
-          <div class="card-content2">
-            <span>TAKE ACTION</span>
+          <!-- <div class="card-content2">
+            <span class="action">TAKE ACTION</span>
             <h3 class="hdr">
             Speak up to support international conservation funding.
             </h3>
             <span><button class="congressButton">Call Congress today > </button></span>
+          </div> -->
+          <div>
+
           </div>
         </li>
 
