--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
   <div class="navbar">
     <ul class="navbarList">
       <div class="nbFirstItems">
-        <li>OUR WORK</li>
-        <li>SPECIES</li>
+        <li id="work">OUR WORK</li>
+        <li id="work">SPECIES</li>
         <li>PLACES</li>
       </div>
     </ul>
 
 
     <div class=nbList2>
-      <li>ABOUT US</li>
-      <li>HOW TO HELP</li>
+      <li id="nav1">ABOUT US</li>
+      <li id="nav1">HOW TO HELP</li>
 
       <li >
         <input class="search" type="text" placeholder="Search">
